--- a/styles/scss/_footer.scss
+++ b/styles/scss/_footer.scss
@@ -3,8 +3,9 @@
   color: $black;
   padding: 20px 0;
   .footer_menu {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
 }
 
@@ -12,7 +13,7 @@
   width: 100%;
   font-size: $text-size;
   .subtitle {
-    margin-bottom: 25px;
+    padding-bottom: 10px;
     color: $brand-color;
   }
   .footer__links {
@@ -31,6 +32,6 @@
   gap: 13px;
 
   a {
-    font-size: $title-size;
+    font-size: $subtitle-size;
   }
 }
