--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -25,32 +25,10 @@
   max-width: 178px;
 }
 
-//mudar de loja
-.header__btn {
-  position: relative;
-  width: 204px;
-  font-size: $text-size;
-  border: 2px solid $white;
-  border-radius: 5px;
-  transition: background-color 0.3s ease-out, border-color 0.3s ease-out,
-    color 0.3s ease-out;
-  background-color: initial;
+.navbar-toggler-icon {
   color: $white;
-  text-align: left;
-  padding: 6px 12px;
-
-  &:hover {
-    border-color: $white;
-    background-color: $white;
-    color: $black;
-  }
-  .header__btn-icon {
-    position: absolute;
-    right: 0;
-  }
 }
-
-//procurar
+//search bar
 .header__input-container {
   position: relative;
 
@@ -62,28 +40,27 @@
     border: none;
     border-radius: 5px;
     width: 300px;
+
+    &:focus {
+      background-color: $white;
+      color: $black;
+      outline: 0;
+      box-shadow: 2px 3px 0 2px rgb(33 36 39 / 0.6%);
+    }
+  }
+
+  .input__icon {
+    position: absolute;
+    top: 2px;
+    right: 0;
+    z-index: 3;
+    height: 100%;
+    color: $black;
+    text-align: center;
+    font-size: $title-size;
   }
 }
 
-.header__input-field:focus {
-  background-color: $white;
-  color: $black;
-  outline: 0;
-  box-shadow: 2px 3px 0 2px rgb(33 36 39 / 0.6%);
-}
-
-.input__icon {
-  position: absolute;
-  top: 2px;
-  right: 0;
-  z-index: 3;
-  height: 100%;
-  color: $black;
-  text-align: center;
-  font-size: $title-size;
-}
-
-//icons
 .header__icon-group {
   display: flex;
   gap: 10px;
